--- a/src/java/tajmi/nbproject/project.properties
+++ b/src/java/tajmi/nbproject/project.properties
@@ -5,6 +5,7 @@ build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
+build.generated.sources.dir=${build.dir}/generated-sources
 # Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
@@ -63,7 +64,7 @@ javadoc.windowtitle=
 main.class=tajmi.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=JDK_1.5
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
