added cdk libraries and docs

--- a/src/java/tajmi/nbproject/project.properties
+++ b/src/java/tajmi/nbproject/project.properties
@@ -21,6 +21,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/tajmi.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.cdk-1.2.1.jar=lib/cdk-1.2.1.jar
 file.reference.commons-logging-1.1.jar=lib/xmlrpc-3.1.1/lib/commons-logging-1.1.jar
 file.reference.scala-library-src.jar=lib/scala-library-src.jar
 file.reference.scala-library.jar=lib/scala-library.jar
@@ -39,7 +40,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.scala-library-src.jar}:\
-    ${file.reference.scala-library.jar}
+    ${file.reference.scala-library.jar}:\
+    ${file.reference.cdk-1.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,6 +59,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.cdk-1.2.1.jar=lib/cdk-javadoc-1.2.1.jar!/cdk-javadoc-1.2.1/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
