SOM/KMeans broken

--- a/src/java/tajmi/nbproject/project.properties
+++ b/src/java/tajmi/nbproject/project.properties
@@ -23,6 +23,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.cdk-1.2.1.jar=lib/cdk-1.2.1.jar
 file.reference.commons-logging-1.1.jar=lib/xmlrpc-3.1.1/lib/commons-logging-1.1.jar
+file.reference.gluegen-rt.jar=lib/jogl/jogl-1.1.1-macosx-universal/lib/gluegen-rt.jar
+file.reference.jogl.jar=lib/jogl/jogl-1.1.1-macosx-universal/lib/jogl.jar
 file.reference.scala-library-src.jar=lib/scala-library-src.jar
 file.reference.scala-library.jar=lib/scala-library.jar
 file.reference.ubigraph.jar=lib/ubigraph.jar
@@ -41,7 +43,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.scala-library-src.jar}:\
     ${file.reference.scala-library.jar}:\
-    ${file.reference.cdk-1.2.1.jar}
+    ${file.reference.cdk-1.2.1.jar}:\
+    ${file.reference.gluegen-rt.jar}:\
+    ${file.reference.jogl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
