using amino acids to test SOM

--- a/src/java/tajmi/test-data/test.config
+++ b/src/java/tajmi/test-data/test.config
@@ -1,5 +1,5 @@
 name = Test
-molecules directories = test-data/hiv1-inhibitors:test-data/known
+molecules directories = test-data/hiv1-inhibitors
 molecule names file = test-data/hiv1-names.txt
 write cluster mcss = no
 cluster mcss directory = test-data/mcss
