Finished Self Organizing Map with config file

--- a/src/java/tajmi/test-data/amino-acids.config
+++ b/src/java/tajmi/test-data/amino-acids.config
@@ -1,7 +1,21 @@
 name = amino acids
+
+# input data
 molecules directories = test-data/amino-acids
 molecule names file = test-data/amino-acids-names.txt
+
+### SOM field viewers ###
+show opengl viewer = true #need -Djava.library.path=/path/to/jogl/lib
 write cluster mcss = true
 cluster mcss directory = test-data/amino-acids-mcss
 mcss prefix = aa-mcss-
 mcss format = smiles
+
+# SOM initialization
+field length = 10
+field width = 10
+
+# SOM functions
+max iterations = 2
+
+verbosity = Verbose #options are: VeryVerbose, Everything
