--- a/src/java/tajmi/nbproject/project.properties
+++ b/src/java/tajmi/nbproject/project.properties
@@ -67,7 +67,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=tajmi.Main
+main.class=tajmi.SelfOrganizingMap
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
@@ -77,7 +77,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
+run.jvmargs=-Djava.library.path=/home/badi/src/ma-arafah.git/src/java/tajmi/lib/jogl/jogl-1.1.1-linux-amd64/lib
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
