Settings.java can handled biological activity info

--- a/src/java/tajmi/test-data/amino-acids.config
+++ b/src/java/tajmi/test-data/amino-acids.config
@@ -1,8 +1,10 @@
 name = amino acids
+biological activity = IC50
 
 # input data
 molecules directories = test-data/amino-acids
-molecule names file = test-data/amino-acids-names.txt
+molecule info file = test-data/amino-acids-names.txt
+read biological activity = true
 
 ### SOM field viewers ###
 show opengl viewer = true #need -Djava.library.path=/path/to/jogl/lib
