refactoring and addition of code to allow reading of descriptors & writing of cluster info

--- a/src/java/tajmi/test-data/amino-acids.config
+++ b/src/java/tajmi/test-data/amino-acids.config
@@ -3,13 +3,16 @@ biological activity = IC50
 
 # input data
 molecules directories = test-data/amino-acids
-molecule info file = test-data/amino-acids-names.txt
-read biological activity = true
+molecule names file = test-data/amino-acids-names.txt
+used descriptors file = test-data/amino-acids-descriptors.txt
 
 ### SOM field viewers ###
-show opengl viewer = true #need -Djava.library.path=/path/to/jogl/lib
-write cluster mcss = true
+show opengl viewer = false #need -Djava.library.path=/path/to/jogl/lib
+write cluster mcss = false
+write cluster info = true
 cluster mcss directory = test-data/amino-acids-mcss
+cluster info directory = test-data/amino-acids-mcss
+cluster prefix = clust-
 mcss prefix = aa-mcss-
 mcss format = smiles
 
@@ -18,6 +21,6 @@ field length = 10
 field width = 10
 
 # SOM functions
-max iterations = 2
+max iterations = 1
 
 verbosity = Verbose #options are: VeryVerbose, Everything
